[metadata]
name = pyhtps
version = 0.0.1
author = Andrea Fossati
author_email = andrea.fossati@ucsf.edu
description = Python workflow for analysis of HTPS experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anfoss/PyHTPS
project_urls =
    Bug Tracker = https://github.com/anfoss/PyHTPS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
python_requires = >=3.6
